src/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root { font-family: 'Inter', system-ui, sans-serif; }

@supports (font-variation-settings: normal) {
  :root { font-family: 'Inter var', system-ui, sans-serif; }
}

button {
    padding: 0.5em 1em;
    border-radius: 1em;
    cursor: pointer;
}

body {
    --default-padding: 1rem;

    min-height: 100vh;
    display: grid;
    grid-template-columns: 2fr 5fr;
}

.sidebar {
    background-color: #2367DC;
    color: #fff;
    padding: var(--default-padding);
}

.sidebar button {
    background-color: #fff;
    border: 1px solid black;
}

.sidebar-header,
.content-header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 1rem;
}

#project-list {
    font-size: 1.3rem;
    list-style-type: none;
    display: flex;
    flex-direction: column;
}

#project-list li {
    flex: 1;
    padding: 0.5rem;
    border-radius: 0.5em;
}

#project-list li:hover{
    background-color: #3976e0;
}

.content {
    --main-bg-color: #f9f4f6;
    --hover-bg-color: #c7c3c5;
    
    background-color: var(--main-bg-color);
    padding: var(--default-padding);
}

.content ul {
    --low-priority-color: rgb(0, 128, 255);
    --med-priority-color: rgb(255, 200, 0);
    --high-priority-color: rgb(255, 40, 40);

    list-style-type: none;
    display: flex;
    flex-direction: column;
    gap: 0.5em;
}

.content ul li {
    display: flex;
    align-items: center;
    gap: 0.5em;
    padding: 0.5em;
    border-radius: 0.5em;
    border-left: 0.2em black solid;
    background-color: #fff;
}

.content ul li.low-priority {
    border-left-color: var(--low-priority-color);
}

.content ul li.med-priority {
    border-left-color: var(--med-priority-color);
}

.content ul li.high-priority {
    border-left-color: var(--high-priority-color);
}

.content ul li:hover {
    background-color: var(--hover-bg-color);
}

.content ul li p {
    flex: 1;
}

.content ul li button {
    border: none;
    background: none;
    padding: 0.5em;
}

.content ul li button:hover {
    cursor: pointer;
}

.button-group {
    display: flex;
    gap: 0.5em;
}

#edit-project-button {
    background-color: #fff;
    color: black;
    border: 1px solid black;
}

#edit-project-button:hover,
#add-project-button:hover {
    background-color: #e6e6e6;
}

#add-todo-button {
    background-color: #2367DC;
    color: #fff;
    border: 1px solid black;
}

#add-todo-button:hover {
    background-color: #205dc6;
}

